# axion

./: .cursorrules  .gitignore  .prettierignore  README.md  docker-compose.yml  docker-compose.yml.bak  package.json  turbo.json
.github/workflows/: ci.yml  runner-agent.yml
apps/auth-service/: package.json
apps/client/: README.md  package.json  proxy.ts  tsconfig.json
apps/codegen-service/: .env.example  README.md  package.json
apps/deployment-service/: .env.example  README.md  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json
apps/graph-service/: .env.example  README.md  package.json  tsconfig.json
apps/infrastructure-service/: .env.example  README.md  (+1 more)
apps/runner-agent/: .gitignore  BUILD_STATUS.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  Makefile  README.md  agent.toml.example  build.rs
apps/runner-agent/.cargo/: config.toml
apps/runner-agent/deployment/: axion-agent.service  install.sh
apps/runner-agent/src/: main.rs
apps/runner-agent/src/command/: executor.rs  mod.rs
apps/runner-agent/src/config/: mod.rs
apps/runner-agent/src/docker/: manager.rs  mod.rs  swarm.rs
apps/runner-agent/src/error/: mod.rs
apps/runner-agent/src/grpc/: client.rs
apps/runner-agent/src/health/: mod.rs  server.rs
apps/runner-agent/src/ipc/: mod.rs  server.rs
apps/runner-agent/src/kafka/: consumer.rs  mod.rs  producer.rs  types.rs
apps/runner-agent/src/telemetry/: collector.rs  mod.rs
apps/runner-agent/src/update/: manager.rs  mod.rs
apps/runner-agent/src/utils/: mod.rs  retry.rs  shutdown.rs
docker/: README.md  generate-traefik-config.ts  package.json  services.config.ts  tsconfig.json
docs/: AI_MODEL_SELECTION.md  API_REFERENCE.mdx  APPLIED_IMPROVEMENTS_GRAPH_SERVICE.md  ARCHITECTURE.mdx  BOILERPLATE_REDUCTION_SUMMARY.md  BULLMQ_METRICS.mdx  BULLMQ_STANDARDIZATION.mdx  CI_CD.mdx  COMPARISON.mdx  CONTRACTS_AND_VALIDATION.mdx  CONTRACT_COMPLIANCE_CHECK.md  CONTRACT_TESTS.mdx  DEVELOPMENT_SETUP.md  E2E_TESTING.mdx  FINAL_CHECKLIST.md  FINAL_SUMMARY.md  IMPROVEMENTS_REDUCING_BOILERPLATE.md  KAFKA_CONSUMER_GROUPS.mdx  KAFKA_DLQ.mdx  KAFKA_HEADERS.mdx  KAFKA_INTEGRATION.md  KAFKA_STANDARDIZATION.mdx  MICROSERVICE_TEMPLATE.md  OPENROUTER_INTEGRATION.md  PROTOBUF_VERSIONING.mdx  RATE_LIMITING.mdx  RUNNER_AGENT.mdx  SECRETS_MANAGEMENT.mdx  TAURI_CLIENT.mdx  TECHNICAL_DETAILS.mdx  TODO.mdx  TRAEFIK_KAFKA_ARCHITECTURE.md  TRAEFIK_SERVICE_DISCOVERY.md  TYPING_REFACTORING_PLAN.md  index.md  index.mdx  setup.md
scripts/: check-env.ts  dev.ts
(+288 files in other folders)
