[package]
name = "axion-runner-agent"
version = "0.1.0"
edition = "2021"
authors = ["Axion Team"]
description = "Axion Runner Agent - High-performance deployment agent for managing Docker Swarm on client servers"
license = "MIT"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# gRPC and Protobuf
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"

# Kafka client (without ssl for now - will be configured via system OpenSSL later)
rdkafka = { version = "0.38.0", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10"

# Configuration management
config = "0.15.19"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# HTTP server for metrics and health
axum = { version = "0.8.2", features = ["tokio"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Metrics
prometheus = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Time and Duration
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Docker client (0.16 doesn't use bincode 3.0)
bollard = "0.16"

# Cryptography and security
sha2 = "0.10"
hex = "0.4"

# Retry and backoff
tokio-retry = "0.3"

# Graceful shutdown
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Environment variables
dotenvy = "0.15"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# File system operations
notify = "8.2.0"

# Command execution
shell-words = "1.1"

# Shell expansion for config paths
shellexpand = "3.1"

[build-dependencies]
tonic-build = "0.14.2"

[dev-dependencies]
mockall = "0.14.0"
tempfile = "3.13"

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Single codegen unit for better optimization
strip = true          # Strip debug symbols
panic = "abort"       # Abort on panic (smaller binary)

# Profile for static musl build
[profile.release-musl]
inherits = "release"

[[bin]]
name = "axion-agent"
path = "src/main.rs"
